# assimp_anim

./: CMakeLists.txt  main.cpp
modelloader/: mesh.cpp  mesh.h  texture.cpp  texture.h
models/: cowboy.dae  cowboy2.dae  cube.dae  cube2.dae  cubetest.blend  kniggit.blend  kniggit.blend1  knight.dae  ninja.dae  plane.dae  spaceman.blend  spaceman.blend1  spaceman.dae  sphere.blend  sphere.dae  triangle.dae
shaders/: frag.glsl  vert.glsl
